<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Default String English -->

    <string name="app_name">Survival Frog</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_game">Easy Level</string>
    <string name="start">Start</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="restart">Restart</string>
    <string name="title_activity_loading">Loading</string>
    <string name="title_activity_game_activity2">Hard Level</string>
    <string name="title_activity_dead_pantalla_tress">Dead Screen</string>
    <string name="title_activity_creditos">Credit Screen</string>
    <string name="title_activity_next_normal_level">Next Level</string>

    <!-- MainActivity -->
    <string name="easylevel_button">Easy Level</string>
    <string name="normal_button">Normal Level</string>
    <string name="hard_button">Hard Level</string>
    <!-- Loading Screen -->
    <string name="loading">Loading...</string>

    <!-- Dead Screen String -->
    <string name="you_dead">You Lost</string>
    <string name="dead_score">Score get :</string>
    <string name="dead_button_text">Try Again</string>

    <!-- NextNormalLevel Screen -->
    <string name="bt_nextnormal_next">Next Level</string>
    <string name="bt_nextnormal_back">Back to Menu</string>
    <string name="tv_nextnormal_win">You Win</string>
    <string name="tv_nextnormal_score">Score get :</string>

    <!-- Credit Screen Strings -->
    <string name="congratz_message">Congratulation You Have Finish The Game</string>
    <string name="hard_points">Score get :</string>
    <string name="hard_max_points">MAX SCORE</string>
    <string name="designe">Designe by :</string>
    <string name="cristian">Cristian Bautista(Android Programer)</string>
    <string name="ismael">Ismael Caballero(Android Programer)</string>
    <string name="dani">Daniel Cordoba(Android Programer)</string>
    <string name="thanks">Thanks For Playing</string>
    <string name="credit_boton_back">Back to Menu</string>
    <string name="title_activity_next_hard_level">NextHardLevel</string>

</resources>