<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NextNormalLevel" >

    <TextView
        android:id="@+id/tv_nextnormal_win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_nextnormal_win" />

    <TextView
        android:id="@+id/tv_nextnormal_puntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_nextnormal_win"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/tv_puntuacion_margin_top"
        android:text="TextView" />

    <Button
        android:id="@+id/bt_nextnormal"
        android:layout_width="@dimen/bt_nextnormal_next_ancho"
        android:layout_height="@dimen/bt_nextnormal_next_alto"
        android:layout_below="@+id/tv_nextnormal_puntuacion"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/bt_nextnormal_next_margin_top"
        style="@style/btnStyleOrange"
        android:text="@string/bt_nextnormal_next" />

    <Button
        android:id="@+id/bt_nextnormal_back"
        android:layout_width="@dimen/bt_nextnormal_back_ancho"
        android:layout_height="@dimen/bt_nextnormal_back_alto"
        android:layout_below="@+id/tv_nextnormal_puntuacion"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/bt_nextnormal_back_margin_top"
        style="@style/btnStyleOrange"
        android:text="@string/bt_nextnormal_back" />

</RelativeLayout>