<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pantallainiciofondo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/logoprincipal"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/logo_alto"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/survival_frog_logo" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="@dimen/botones_ancho"
        android:layout_height="@dimen/botones_alto"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/logoprincipal"
        android:layout_marginTop="@dimen/boton_easylevel_margin_top"
        android:onClick="goGameActivity"
        style="@style/btnStyleOrange"
        android:text="@string/easylevel_button" />

    <Button
        android:id="@+id/btnormallevel"
        android:layout_width="@dimen/boton_normal_ancho"
        android:layout_height="@dimen/botones_alto"
        android:layout_below="@+id/logoprincipal"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/boton_normallevel_margin_top"
        android:text="@string/normal_button"
        style="@style/btnStyleOrange"
        android:onClick="goNormalevel" />

    <Button
        android:id="@+id/pantalla2"
        android:layout_width="@dimen/boton_hard_ancho"
        android:layout_height="@dimen/boton_hard_alto"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/logoprincipal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/boton_hardlevel_margin_top"
        android:onClick="goPantallados"
        style="@style/btnStyleOrange"
        android:text="@string/hard_button" />

</RelativeLayout>